--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="src/main.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/683b65d101.js" crossorigin="anonymous"></script>
+  <!-- <title>Hello World</title> -->
 </head>
 <body>
   <div id="root"></div>
